changed img ref

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <!-- Tab content -->
     <div id="images" class="tab-content active-content image-gallery">
 			<img src="img/number_11_ploughing_10x8.jpg" alt="Image 1">
-			<img src="img/DSC_2124.jpg" alt="Image 2">
-			<img src="img/DSC_2147.jpg" alt="Image 3">
-			<img src="img/DSC_2764.jpg" alt="Image 4">
+			<img src="img/DSC_2124.JPG" alt="Image 2">
+			<img src="img/DSC_2147.JPG" alt="Image 3">
+			<img src="img/DSC_2764.JPG" alt="Image 4">
 			<img src="img/IMG_1036.jpg" alt="Image 5">
 
     </div>
